# ledstripinterface

./: .gitignore  BUILD  WORKSPACE  go.mod  go.sum  main.go  make_protos.bat
arduino/: BUILD.bazel  arduino.go  arduino.ino  arduino_test.go
conveyor/: BUILD.bazel  main.go
conveyorsimulator/: BUILD.bazel  main.go
demo/: BUILD.bazel  shiftregister.go
demo/engine/: BUILD.bazel  demo.go
example/: BUILD.bazel  demo.go  shiftregister.go
example/engine/: BUILD.bazel  demo.go
grpc/: BUILD.bazel  client.go  helper.go  server.go  server_test.go
grpc/arduino/: BUILD.bazel  arduino.go  arduino.ino  arduino_test.go  demo.go
grpc/cmd/: BUILD.bazel  main.go
lib/: BUILD.bazel  client.go  helper.go  server.go  server_test.go
pb/: BUILD.bazel  api.pb.go
proto/: BUILD.bazel  api.pb.go  api.proto  conveyor.proto  displayservice.proto  frame.proto
serial/: BUILD.bazel  controller_test.go
serial/cmd/: BUILD.bazel  main.go
service/: BUILD.bazel  client.go  helper.go  main.go  render.go  server.go  service.go
service/client/: BUILD.bazel  client.go
service/cmd/: BUILD.bazel  main.go
service/lib/: BUILD.bazel  helper.go  render.go  server.go
service/serial/: BUILD.bazel  controller.go
service/serial/cmd/: BUILD.bazel  main.go
service/udp/: BUILD.bazel  send_test.go
service/udp/cmd/: BUILD.bazel  main.go
shiftregister/: BUILD.bazel  shiftregister.go
shiftregister/cmd/: BUILD.bazel  main.go
udp/: BUILD.bazel  send.go
udp/arduino/: arduino.ino
udp/cmd/: BUILD.bazel  main.go
