load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "helper.go",
        "server.go",
    ],
    importpath = "ledstripinterface/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//arduino:go_default_library",
        "//pb:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//arduino:go_default_library",
        "//pb:go_default_library",
    ],
)
