load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ledstripinterface_proto",
    srcs = [
        "conveyor.proto",
        "displayservice.proto",
        "frame.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

go_proto_library(
    name = "ledstripinterface_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "ledstripinterface/proto",
    proto = ":ledstripinterface_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":ledstripinterface_go_proto"],
    importpath = "ledstripinterface/proto",
    visibility = ["//visibility:public"],
)
