load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["shiftregister.go"],
    importpath = "ledstripinterface/shiftregister",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@com_github_nfnt_resize//:go_default_library",
    ],
)
