load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "helper.go",
        "render.go",
        "server.go",
    ],
    importpath = "ledstripinterface/service/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@com_github_nfnt_resize//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
