load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "ledstripinterface/service/serial",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@com_github_tarm_serial//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["controller_test.go"],
    embed = [":go_default_library"],
)
