load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "ledstripinterface/udp/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//demo/engine:go_default_library",
        "//proto:go_default_library",
        "//serial:go_default_library",
        "//udp:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
