load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "ledstripinterface/service/serial/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//example:go_default_library",
        "//proto:go_default_library",
        "//service/serial:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
